Replace logo section with an image for the Lakeside High School Sandwich Project Club, removing text elements for a cleaner design.

--- a/TSP_Lakeside_Flyer_Final.html
+++ b/TSP_Lakeside_Flyer_Final.html
@@ -340,15 +340,7 @@
 
         <div class="logo-section">
             <div class="logo-badge">
-                <div class="school-name">
-                    <span>L</span><span>A</span><span>K</span><span>E</span><span>S</span><span>I</span><span>D</span><span>E</span><span>&nbsp;</span><span>H</span><span>I</span><span>G</span><span>H</span>
-                </div>
-                <div class="sandwich-emoji">🥪</div>
-                <div class="logo-text">
-                    <div class="title">SANDWICH</div>
-                    <div class="subtitle">PROJECT</div>
-                    <div class="club">CLUB</div>
-                </div>
+                <img src="Lakeside High School Club.jpeg" alt="Lakeside High School Sandwich Project Club Logo" style="width: 100%; height: 100%; object-fit: cover; border-radius: 50%;">
             </div>
         </div>
 
