Replace QR code placeholder with actual image for Amazon Wishlist in Lakeside Flyer

--- a/TSP_Lakeside_Flyer_Final.html
+++ b/TSP_Lakeside_Flyer_Final.html
@@ -371,18 +371,7 @@
             <div class="qr-area">
                 <div class="qr-box">
                     <div class="qr-frame">
-                        <!--
-                        TO ADD YOUR ACTUAL QR CODE:
-                        1. Save your QR code image in the same folder as this HTML file
-                        2. Replace the placeholder below with: <img src="your-qr-code.png" alt="QR Code">
-
-                        OR to embed directly, convert your image to base64 and use:
-                        <img src="data:image/png;base64,YOUR_BASE64_STRING_HERE" alt="QR Code">
-                        -->
-                        <div style="text-align: center; color: var(--deep-teal); font-size: 11px; padding: 10px;">
-                            <div style="font-size: 35px; margin-bottom: 8px;">📱</div>
-                            <div style="font-weight: 600;">PLACE QR CODE<br>IMAGE HERE</div>
-                        </div>
+                        <img src="amazon wish list qr code.png" alt="Amazon Wishlist QR Code">
                     </div>
                 </div>
                 <div class="qr-label">SCAN FOR AMAZON WISHLIST</div>
