Adjust overflow properties in TSP Flyer Graphic to improve layout and visibility, ensuring better content presentation.

--- a/TSP_Flyer_Graphic.html
+++ b/TSP_Flyer_Graphic.html
@@ -24,7 +24,7 @@
             background: #236383;
             -webkit-print-color-adjust: exact;
             print-color-adjust: exact;
-            overflow: hidden;
+            overflow: auto;
             position: relative;
         }
 
@@ -38,9 +38,9 @@
 
         .flyer {
             width: 100%;
-            height: 100%;
+            min-height: 100%;
             position: relative;
-            overflow: hidden;
+            overflow: visible;
         }
 
         /* Dynamic background shapes */
@@ -455,17 +455,17 @@
                 </div>
                 <div class="info-box accent">
                     <h3>🥪 WHAT WE DO</h3>
-                    <p>Make sandwiches for those in need in our community</p>
+                    <p>Make sandwiches for those in need in our community at meetings, at home with our families, or at group sandwich-making events!</p>
                 </div>
                 <div class="info-box teal">
                     <h3>⭐ CAN'T MAKE IT?</h3>
-                    <p>Earn points by donating supplies, participating in group sandwich-making opportunities, or making sandwiches at home with your family!</p>
+                    <p>Earn points by donating supplies (Amazon Wishlist) or by participating in any of the above when you can!</p>
                 </div>
             </div>
 
             <div class="points-callout">
                 <span class="icon">💡</span>
-                <p><strong>EARN CLUB POINTS:</strong> Donate via Amazon Wishlist, participate in group sandwich-making opportunities, or make sandwiches at home with your family!</p>
+                <p><strong>EARN CLUB POINTS:</strong> Donate via Amazon Wishlist or get credit for sandwich-making at meetings, at home, or at group events!</p>
             </div>
 
             <div class="bottom-section">
