Update point-earning description in TSP Flyer Graphic for clarity, specifying participation options in meetings and events.

--- a/TSP_Flyer_Graphic.html
+++ b/TSP_Flyer_Graphic.html
@@ -468,7 +468,7 @@
                 </div>
                 <div class="info-box teal">
                     <h3>⭐ CAN'T MAKE IT?</h3>
-                    <p>Earn points by donating supplies (Amazon Wishlist) or by participating in any of the above when you can!</p>
+                    <p>Earn points by donating supplies (Amazon Wishlist) or by joining in at meetings, at home, or at group events when you can!</p>
                 </div>
             </div>
 
