Add contact information for GroupMe in TSP Flyer Graphic to enhance engagement and communication options.

--- a/TSP_Flyer_Graphic.html
+++ b/TSP_Flyer_Graphic.html
@@ -305,6 +305,8 @@
             width: 100%;
             height: 100%;
             object-fit: contain;
+            object-position: center center;
+            display: block;
         }
 
         .qr-label {
@@ -493,6 +495,10 @@
 
                 <div class="contact-block">
                     <h2>✨ GET INVOLVED</h2>
+                    <div class="contact-item">
+                        <div class="label">JOIN OUR GROUPME</div>
+                        <div class="value teal">Scan the QR code to stay in the loop!</div>
+                    </div>
                     <div class="contact-item">
                         <div class="label">FOLLOW US ON INSTAGRAM</div>
                         <div class="value">@thesandwichprojectclubatlakesidehigh</div>
