Adjust footer positioning in TSP Flyer Graphic for improved layout and visual consistency, and add overflow property to prevent horizontal scrolling.

--- a/TSP_Flyer_Graphic.html
+++ b/TSP_Flyer_Graphic.html
@@ -16,6 +16,10 @@
             box-sizing: border-box;
         }
 
+        html {
+            overflow-x: hidden;
+        }
+
         body {
             font-family: 'Poppins', sans-serif;
             width: 8.5in;
@@ -366,7 +370,7 @@
         /* Footer */
         .footer {
             position: absolute;
-            bottom: 0;
+            bottom: -0.3in;
             left: 0;
             right: 0;
             background: var(--golden);
