Refine spacing and padding in TSP Flyer Graphic for improved layout consistency, and remove footer text to streamline design.

--- a/TSP_Flyer_Graphic.html
+++ b/TSP_Flyer_Graphic.html
@@ -195,14 +195,14 @@
         .info-grid {
             display: flex;
             gap: 15px;
-            margin-bottom: 15px;
+            margin-bottom: 12px;
         }
 
         .info-box {
             flex: 1;
             background: rgba(255,255,255,0.95);
             border-radius: 15px;
-            padding: 18px 12px;
+            padding: 14px 12px;
             text-align: center;
             position: relative;
             overflow: hidden;
@@ -257,11 +257,11 @@
         .points-callout {
             background: var(--accent);
             border-radius: 12px;
-            padding: 14px 20px;
+            padding: 10px 20px;
             display: flex;
             align-items: center;
             gap: 15px;
-            margin-bottom: 15px;
+            margin-bottom: 12px;
         }
 
         .points-callout .icon {
@@ -325,7 +325,7 @@
             flex: 1;
             background: rgba(255,255,255,0.95);
             border-radius: 15px;
-            padding: 18px 20px;
+            padding: 14px 16px;
         }
 
         .contact-block h2 {
@@ -337,7 +337,7 @@
         }
 
         .contact-item {
-            margin-bottom: 10px;
+            margin-bottom: 8px;
         }
 
         .contact-item .label {
@@ -370,20 +370,13 @@
         /* Footer */
         .footer {
             position: absolute;
-            bottom: -0.3in;
+            bottom: 0;
             left: 0;
             right: 0;
             background: var(--golden);
-            padding: 15px;
+            padding: 8px;
             text-align: center;
             z-index: 20;
-        }
-
-        .footer p {
-            font-family: 'Bebas Neue', sans-serif;
-            font-size: 18px;
-            color: var(--deep-teal);
-            letter-spacing: 3px;
         }
 
         /* Decorative elements */
@@ -517,9 +510,7 @@
         </div>
 
         <!-- Footer -->
-        <div class="footer">
-            <p>THE SANDWICH PROJECT • FIGHTING HUNGER ONE SANDWICH AT A TIME</p>
-        </div>
+        <div class="footer"></div>
     </div>
 </body>
 </html>
